# zebrafix

clang/include/clang/Basic/: Attr.td  AttrDocs.td
clang/lib/AST/: ASTContext.cpp
clang/lib/CodeGen/: CGCall.cpp  CodeGenModule.cpp
clang/lib/Sema/: SemaDeclAttr.cpp
llvm/include/llvm/AsmParser/: LLParser.h  LLToken.h
llvm/include/llvm/Bitcode/: LLVMBitCodes.h
llvm/include/llvm/CodeGen/: LiveIntervals.h  LiveRegMatrix.h  Spiller.h  TargetRegisterInfo.h
llvm/include/llvm/IR/: Attributes.h  Attributes.td  Module.h
llvm/include/llvm/Support/: ZebraProperties.h
llvm/lib/AsmParser/: LLLexer.cpp  LLParser.cpp
llvm/lib/CodeGen/: InlineSpiller.cpp  LiveIntervals.cpp  LiveRegMatrix.cpp  MachineCopyPropagation.cpp  PrologEpilogInserter.cpp  RegAllocBase.cpp  RegAllocBasic.cpp  RegAllocFast.cpp  RegAllocGreedy.cpp  RegAllocPBQP.cpp  RegisterCoalescer.cpp  RegisterScavenging.cpp  TargetInstrInfo.cpp
llvm/lib/IR/: AttributeImpl.h  Attributes.cpp
zebrafix-passes/: .gitignore  CMakeLists.txt  ZebraAdjustGlobalsPass.cpp  ZebraAdjustGlobalsPass.h  ZebraAdjustIdentifiedStructsPass.cpp  ZebraAdjustIdentifiedStructsPass.h  ZebraAdjustMemoryPass.cpp  ZebraAdjustMemoryPass.h  ZebraCallgraphTraversalPass.cpp  ZebraCallgraphTraversalPass.h  ZebraCounterPass.cpp  ZebraCounterPass.h  ZebraHeapAllocsPass.cpp  ZebraHeapAllocsPass.h  ZebraInsertStructsPass.cpp  ZebraInsertStructsPass.h  ZebraRewriteCallsPass.cpp  ZebraRewriteCallsPass.h  ZebraRewriteConstantExprGEPsPass.cpp  ZebraRewriteConstantExprGEPsPass.h  ZebraSVFMemIntrinsics.cpp  ZebraSVFMemIntrinsics.h  ZebrafixInit.cpp
(+7 files in other folders)
